kustomize/overlay/staging/test-jayani-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: test-jayani-staging
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_2114d41b-c03c-493c-9940-7a11fce4f083
    environmentId: env_f82038a9-37d8-463a-b8ae-3a397f981115
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_f82038a9-37d8-463a-b8ae-3a397f981115
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
